# titabi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  wait_for_db.py
.github/workflows/: deploy.yml
accounts/: admin.py  auth_backends.py  managers.py  models.py  serilizers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_user_is_artisan_remove_user_username_and_more.py  0003_alter_user_managers.py
artisan/: admin.py  models.py  serializers.py  urls.py  views.py
artisans/: admin.py  models.py  serializers.py  urls.py  views.py
artisans/migrations/: 0001_initial.py  0002_artisancategory_artisanskill_artisanprofile_and_more.py  0003_alter_artisanprofile_rating.py
jobs/: admin.py  models.py  serializers.py  urls.py  views.py
jobs/migrations/: 0001_initial.py  0002_jobrequest_target_artisan.py
notifications/: models.py  urls.py  utils.py  views.py
ratings/: models.py  serializers.py  urls.py  views.py
ratings/migrations/: 0001_initial.py
titabi/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
