[project]
name = "titabi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-rest-auth>=7.0.1",
    "django>=5.2.4",
    "django-allauth>=65.10.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
]
